--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,7 @@ svg.recharts-surface {
 .btn {
   box-shadow: var(--bs-box-shadow-sm) !important;
 }
+
+.bg-ag-header {
+  background-color: var(--ag-header-background-color) !important;
+}
